<resources>
    <string name="app_name">TutaDriver</string>
    <string name="title_activity_maps">Map</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Lorem ipsum.</string>
    <string name="slide_1_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <string name="slide_2_title">Lorem ipsum.</string>
    <string name="slide_2_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <string name="slide_3_title">Lorem ipsum.</string>
    <string name="slide_3_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <string name="slide_4_title">Lorem ipsum.</string>
    <string name="slide_4_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <string name="facebook_app_id">382846332356344</string>
    <string name="fb_login_protocol_scheme">fb382846332356344</string>
    <string name="sigin_up">Sigin Up</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="renter_password">Renter Password</string>
    <string name="last_namer">Last Name</string>
    <string name="email">Email</string>
    <string name="forogot_password">Forogot Password?</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="emailr">Email</string>
    <string name="insert_vechical">Insert My info</string>
    <string name="select_truck">Select Vehicle</string>
    <string name="insert_driver">Deriving Licence</string>
    <string name="insert_phone_number">Phone Number</string>
    <string name="insert_id">ID Number</string>

</resources>
