<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true"
            android:background="#5758BB" android:id="@+id/scrollView2">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
    >

        <!--<ImageView android:src="@drawable/ic_launcher_background"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:layout_gravity="center_horizontal"/>-->

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@android:color/white">
            <EditText android:id="@+id/input_fname"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/white"
                      android:inputType="textPersonName"
                      android:hint="@string/first_name"
                      android:autofillHints="" tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@android:color/white">
            <EditText android:id="@+id/input_lname"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPersonName"
                      android:textColor="@android:color/white"
                      android:hint="@string/last_namer"
                    android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@android:color/white">
            <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:hint="@string/email"
                    android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@android:color/white">
            <EditText android:id="@+id/input_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:textColor="@android:color/white"
                      android:hint="@string/password"
                    android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@android:color/white">

            <EditText android:id="@+id/input_confirm_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:textColor="@android:color/white"
                      android:hint="@string/renter_password"
                    android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sigin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:background="@drawable/round_corner"
                android:textColor="@android:color/white"
                android:text="@string/sigin_up"/>


        <TextView android:id="@+id/link_signin"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/already_have_account_login"
                  android:gravity="center"
                  android:textSize="16sp"
                  android:textColor="@android:color/white"/>


    </LinearLayout>
</ScrollView>