<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true"
            android:background="#5758BB" android:id="@+id/scrollView2">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:id="@+id/linearLayout">


        <!--<ImageView android:src="@drawable/ic_launcher_background"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:layout_gravity="center_horizontal"/>-->

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@android:color/white">
            <EditText android:id="@+id/input_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:textColor="@android:color/white"
                      android:hint="@string/emailr"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@android:color/white">
            <EditText android:id="@+id/input_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:textColor="@android:color/white"
                      android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView android:id="@+id/link_rest_password"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="14dp"
                  android:text="@string/forogot_password"
                  android:gravity="right"
                  android:textSize="14sp"
                  android:textColor="@android:color/white"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:background="@drawable/round_corner"
                android:text="@string/login"/>


        <!--<androidx.constraintlayout.widget.ConstraintLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="30dp">-->

            <!--<View-->
                    <!--android:layout_width="157dp"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:background="@android:color/darker_gray"-->
                    <!--app:layout_constraintStart_toEndOf="@+id/textView"-->
                    <!--android:layout_marginBottom="8dp"-->
                    <!--app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"-->
                    <!--app:layout_constraintTop_toTopOf="parent" android:id="@+id/view"-->
                    <!--app:layout_constraintVertical_bias="0.571" android:layout_marginEnd="8dp"-->
                    <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"-->
                    <!--app:layout_constraintHorizontal_bias="0.0"/>-->


<!--            <TextView-->
<!--                    android:text="OR"-->
<!--                    android:textColor="@android:color/white"-->
<!--                    android:gravity="center"-->
<!--                    android:layout_width="29dp"-->
<!--                    android:layout_height="16dp"-->
<!--                    android:id="@+id/textView"-->
<!--                    android:layout_gravity="center"-->

            />


            <!--<View-->
                    <!--android:layout_width="157dp"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:background="@android:color/darker_gray"-->
                    <!--android:layout_marginTop="8dp"-->
                    <!--app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"-->
                    <!--app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"-->
                    <!--android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>-->


        <!--</androidx.constraintlayout.widget.ConstraintLayout>-->


<!--        <com.facebook.login.widget.LoginButton-->
<!--                android:id="@+id/facebookLoginButton"-->
<!--                android:layout_width="363dp"-->
<!--                android:layout_height="47dp"-->
<!--                android:paddingBottom="20dp"-->
<!--                android:paddingStart="10dp"-->
<!--                android:paddingEnd="10dp"-->
<!--                android:paddingTop="15dp"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_marginTop="24dp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintVertical_bias="0.58"/>-->

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--                android:id="@+id/btn_login_twitter"-->
<!--                android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="20dp"-->
<!--                android:padding="12dp"-->
<!--                android:background="#00aced"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:text="Login with Twitter" app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"/>-->

        <TextView android:id="@+id/link_signup"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/no_account_yet_create_one"
                  android:gravity="center"
                  android:textSize="16sp"
                  android:textColor="@android:color/white"/>


    </LinearLayout>
</ScrollView>